rebuild Chat with RAG flow